Avoid scrollbar in fullscreen

--- a/public/css/chatbox.css
+++ b/public/css/chatbox.css
@@ -32,7 +32,7 @@ div {
     background-color: white;
     width: 100%;
     height: 100%;
-    padding-right: 20%;
+    padding-right: 10%;
     overflow-y:scroll;
 }
 
@@ -82,7 +82,7 @@ div {
 
 .browserChatView{
     padding: 10px;
-    height: 95vh;
+    height: 90vh;
     border: none;
 }
 
